--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 05:05:03 2018</p>
+         Last Run: Wed Dec  5 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -56,13 +56,13 @@
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-16</td>
-                        <td>-21</td>
+                        <td>-22</td>
                         <td>7</td>
                         <td>87</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-19",
                  "-20",
-                 "-21"
+                 "-22"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
+                 "87",
                  "85",
                  "87"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
+                 "10",
                  "8",
-                 "7"
+                 "8"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 05:05:03 2018</p>
+         Last Run: Wed Dec  5 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -249,23 +249,23 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>54</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>54</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>0</td>
-                        <td>53</td>
-                        <td>0</td>
+                        <td>52</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>52</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "0",
+                 "1",
                  "0"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
+                 "57",
                  "55",
-                 "53"
+                 "52"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "54",
-                 "52"
+                 "49",
+                 "49",
+                 "43"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 05:05:03 2018</p>
+         Last Run: Wed Dec  5 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,7 +460,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
@@ -468,31 +468,31 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-1</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>62</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>50</td>
+                        <td>63</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
                         <td>57</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>54</td>
+                        <td>SW</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-5",
+                 "-4",
                  "-2"
                ]
              },
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "62",
+                 "63",
                  "57"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "50",
-                 "54"
+                 "21",
+                 "26",
+                 "29"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 05:05:03 2018</p>
+         Last Run: Wed Dec  5 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,23 +691,23 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>6</td>
-                        <td>77</td>
+                        <td>-8</td>
+                        <td>5</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-7"
+                 "-8"
                ]
              },
              {
@@ -807,7 +807,7 @@
                "data":[
                  "5",
                  "5",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "75",
-                 "77"
+                 "74",
+                 "74",
+                 "76"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "78",
-                 "79"
+                 "74",
+                 "77",
+                 "76"
                ]
              }
            ]
