--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 06:05:06 2018</p>
+         Last Run: Wed Dec  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>10</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-16</td>
-                        <td>-22</td>
-                        <td>7</td>
-                        <td>87</td>
+                        <td>-15</td>
+                        <td>-20</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-19",
-                 "-20",
-                 "-22"
+                 "-19",
+                 "-20"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-14",
-                 "-15",
-                 "-16"
+                 "-14",
+                 "-15"
                ]
              }
            ]
@@ -162,7 +162,7 @@
                "data":[
                  "7",
                  "7",
-                 "7"
+                 "6"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
                  "85",
-                 "87"
+                 "84",
+                 "85"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "8",
-                 "8"
+                 "7",
+                 "6",
+                 "6"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 06:05:06 2018</p>
+         Last Run: Wed Dec  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 06:05:06 2018</p>
+         Last Run: Wed Dec  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -462,13 +462,13 @@
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
-                        <td>-6</td>
+                        <td>-5</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>66</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>63</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>26</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>29</td>
+                        <td>WSW</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-4",
                  "-2"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "63",
-                 "57"
+                 "66",
+                 "60",
+                 "55"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "26",
-                 "29"
+                 "19",
+                 "24",
+                 "27"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 06:05:06 2018</p>
+         Last Run: Wed Dec  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,23 +691,23 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>77</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
-                        <td>-8</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>76</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-8"
+                 "-7"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "74",
-                 "76"
+                 "73",
+                 "73",
+                 "74"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "77",
-                 "76"
+                 "69",
+                 "72",
+                 "71"
                ]
              }
            ]
